--- a/todo.txt
+++ b/todo.txt
@@ -12,12 +12,13 @@ Elevation :
 (later) use techtonic logic in addition to perlin
 
 Biomes :
-(soon) use selectable generation method for "generate" button : propagate, reset, fill gaps, beaches, mountains, extend, shrink, full
+(soon) use selectable generation method for "generate" button : propagation, reset, fill gaps, beaches, mountains, extend, shrink, full
 
 Zones :
 (later) options to allow overlapping or not (two groups? allowed / not-allowed)
-(soon) zone-painting brush is currently buggy
 (later) remove/reserve water from zones
+(later) small zones isolated artifacts
+(later) make zone display look somehow better
 
 Paths :
 (later) width definer similar to water but using pathfinding to define more important roads
@@ -65,3 +66,4 @@ General :
 (later) option to generate details (about everything) for zooming
 (later) Refactor, optimize etc.
 (later) remove comments specific to explain a single commit, add general purpose comments instead
+(later) remove obsolete debug prints
