--- a/todo.txt
+++ b/todo.txt
@@ -23,7 +23,7 @@ Zones :
 Paths :
 (later) width definer similar to water but using pathfinding to define more important roads
 (later) taping sometimes wrong (probably needs doubly connected edges and propagation done right)
-(soon) option to generate paths
+(later) option to generate paths
 (later) when adding a path with selected type different than selected path, create new path with selected type
 
 Struct :
