--- a/todo.txt
+++ b/todo.txt
@@ -13,7 +13,7 @@ Elevation :
 (later) extend water slider range so we can completely make water disappear or fill the whole screen
 
 Biomes :
-(soon) use selectable generation method for "generate" button : propagation, reset, fill gaps, beaches, mountains, extend, shrink, full
+(soon) use selectable generation method for "generate" button : propagation, reset, fill gaps, beaches, mountains, extend, shrink, spots, vary, full
 
 Zones :
 (later) options to allow overlapping or not (two groups? allowed / not-allowed)
