--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,7 @@ Sites :
 
 Elevation :
 (maybe) use techtonic logic in addition to perlin
+(later) make elevation easier to see on this mode when there's biomes on it
 
 Biomes :
 (later) review "value" sliders
@@ -92,3 +93,5 @@ General :
 (later) write a more consistent readme file
 (later) a "fully generate" button once all generate methods have been implemented (keep things already defined though)
 (later) some UI elements (dynamic ones, rendering collapsable ones) miss tooltip infos
+(later) use appropriate caps for strokes (probably round)
+(later) correctly merge strokes that overlap with alpha
