--- a/todo.txt
+++ b/todo.txt
@@ -16,6 +16,7 @@ Biomes :
 (later) review "value" sliders
 (later) make a better "full" generation
 (soon) When adding a biome type from default presets check if there isn't already one with the same name present (in chich case take the next)
+(later) replace "beaches" by same logic but arbitrary elevation and use it instead of some "above" logics in the full generation process
 
 Zones :
 (later) options to allow overlapping or not (two groups? allowed / not-allowed)
@@ -67,6 +68,7 @@ Rendering :
 (soon) show underwater biomes : replace by a "underwater biomes alpha" slider
 (soon) path saturation button doesn't work
 (later) structures sat and alpha variables exist but show no slider
+(later) lightning: build, optionally blur, gradient, dither, etc, then cache
 
 Export :
 (later) Comments (associated with elements in lists) exportable as custom format
@@ -89,7 +91,6 @@ General :
 (soon) rgbToHSB seems to be part of the model class while hsb01ToRGB isnt, also why "01"? can we add more clarity to all this?
 (soon) what's the use of passing "PApplet app" as a reference when methods could be called directly?
 (later) the way ui elements are stored should be a box containing the labels as well, not having the labels partially above it (eg see how HSB sliders are inserted in the layout)
-(soon) revise UI element visual design, stil in an "old windows" way (eg selectors with markers, cursors rather than black dots, radio buttons, pushable buttons)
 (later) write a more consistent readme file
 (later) a "fully generate" button once all generate methods have been implemented (keep things already defined though)
 (later) some UI elements (dynamic ones, rendering collapsable ones) miss tooltip infos
