--- a/todo.txt
+++ b/todo.txt
@@ -36,7 +36,6 @@ Structures :
 (soon) refine the way parameters work (UI, default, selected, etc) (eg reuse structures parameters for upcoming structures) (take care of angle meaning, offset vs additional offset of snapping angle)
 (soon) structures light shading on rendering mode
 (soon) crosses (as on treasure maps)
-(soon) no name in the name section if no structure selected
 (later) use polygon tracing as a structure input mode
 
 Labels :
@@ -59,7 +58,6 @@ Rendering :
 (later) parametrable label color fill (per label type)
 (later) parametrable label outline (per label type)
 (later) labels outline don't work well
-(soon) changing preset should trigger computation of required features such as contour lines if needed
 (maybe) a "save preset" button
 (later) water contour lines distance should be zoom-dependant
 (soon) water contour lines should have a starting and ending alpha
@@ -75,7 +73,7 @@ Export :
 (later) Comments (associated with elements in lists) exportable as custom format
 (later) SVG export with layers (background, borders, paths, structures, labels, legend) and data-* / class attributes for type ids.
 (later) are there existing formats for such tools to handle?
-(soon) trying to export with labels makes the thing crash with a NullPointerException
+(soon) trying to export with labels makes the thing crash with a NullPointerException or IllegalArgumentException: Width (0) and height (0) cannot be <= 0
 (later) path rendering slightly differ from their rendering in rendering mode (should be similar)
 (later) rendering shoud look exactly like the picture to be rendered (including points on paths and resolution, this should be cached, use loading bar)
 (maybe) importing from picture
@@ -89,8 +87,6 @@ General :
 (later) Refactor, optimize etc.
 (soon) remove comments specific to explain a single commit, add general purpose comments instead
 (later) undo states
-(soon) rgbToHSB seems to be part of the model class while hsb01ToRGB isnt, also why "01"? can we add more clarity to all this?
-(soon) what's the use of passing "PApplet app" as a reference when methods could be called directly?
 (later) the way ui elements are stored should be a box containing the labels as well, not having the labels partially above it (eg see how HSB sliders are inserted in the layout)
 (later) write a more consistent readme file
 (later) a "fully generate" button once all generate methods have been implemented (keep things already defined though)
