--- a/todo.txt
+++ b/todo.txt
@@ -18,7 +18,6 @@ Biomes :
 
 Zones :
 (later) options to allow overlapping or not (two groups? allowed / not-allowed)
-(soon) make zone display look somehow better, use reliable method when two outlines share the same border (always distinct, makes sense, line weight into account) and use it for biomes outlines and zones outlines (define segment edges normals, spread segments along it n times = number of borders that share it, based on : which side of it, smaller regions inside big ones)
 (later) use polygon tracing as an alternative to brush
 
 Paths :
@@ -49,7 +48,7 @@ Rendering :
 (later) take inspiration from real map pictures (eg ign maps)
 (later) some ugly dots sometimes appear between polygones
 (later) ripple lines are approximative, so either we optimize them or we make tem display below lands. make sure water contour lines never cross actual coastline
-(soon) use zone method for reliable borders display, make it potentially apply to all kinds of outlines that share the same border all-together at once
+(later) make outline display apply to all kinds of outlines that share the same border all-together at once
 (soon) choosing biomes "pattern" option yields "The file patterns/dots01.png contains bad image data, or may not be an image." while file is seems ok.
 (soon) allow others labels than arbitrary labels
 (later) parametrable label font (per label type)
